Compressed code and indentation